--- a/Laureatgrepi/src/main/resources/templates/contact.html
+++ b/Laureatgrepi/src/main/resources/templates/contact.html
@@ -79,16 +79,17 @@ body {
 
 		<div class="jumbotron"
 			style="background-color: #90AEFF; border-radius: 30px">
-			<h1>Laureat Grepi index page</h1>
+			<h1>Laureat Grepi Contact page</h1>
 			<p>This is a web page created by Laureat Grepi. </p>
 			
 
 		</div>
 		<div class="navbar">
-			<a href="/index"><i class="fa fa-fw fa-home"></i> Home</a> <a
-				href="/CV"><i class="fa fa-address-card-o"></i> CV</a> <a
-				class="active" href="/contact"><i class="fa fa-fw fa-envelope"></i>
-				Contact</a> <a href="/index"><i class="fa fa-fw fa-user"></i> Login</a>
+			 <a class="active" href="/index"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a href="/CV"><i class="fa fa-address-card-o"></i> CV</a> 
+  <a href="/galleria"><i class="fa fa-address-card-o"></i> Galleria</a> 
+  <a href="/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+  <a href="/index"><i class="fa fa-fw fa-user"></i> Login</a>
 
 		</div>
 		<div class="info">
