--- a/Laureatgrepi/src/main/resources/templates/contact.html
+++ b/Laureatgrepi/src/main/resources/templates/contact.html
@@ -87,7 +87,7 @@ body {
 		<div class="navbar">
 			 <a class="active" href="/index"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="/CV"><i class="fa fa-address-card-o"></i> CV</a> 
-  <a href="/galleria"><i class="fa fa-address-card-o"></i> Galleria</a> 
+  <a href="/gallery"><i class="fa fa-address-card-o"></i> Galleria</a> 
   <a href="/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
   <a href="/index"><i class="fa fa-fw fa-user"></i> Login</a>
 
